--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 	<br>
 	<img src="https://media4.giphy.com/media/gulXBo07CiPIK57OT1/giphy.gif?cid=6c09b95282yss9ti3rcwbvya38xo7qh2ctiinr3c105m14hd&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=s">
 	<br><br><br>
-	<a href="page2.html"><button class="btn btn-success btn-lg">฿-Baht</button>
+	<a href="Page2.html"><button class="btn btn-success btn-lg">฿-Baht</button>
 	</a>
-	<a href="page3.html"><button class="btn btn-success btn-lg">€-Euro</button>
+	<a href="Page3.html"><button class="btn btn-success btn-lg">€-Euro</button>
 	</a>
-	<a href="page4.html"><button class="btn btn-success btn-lg">$-Dollar</button>
+	<a href="Page4.html"><button class="btn btn-success btn-lg">$-Dollar</button>
 	</a>
-	<a href="page5.html"><button class="btn btn-success btn-lg">¥-Yen</button>
+	<a href="Page5.html"><button class="btn btn-success btn-lg">¥-Yen</button>
 	</a>
-	<a href="page6.html"><button class="btn btn-success btn-lg">£-Pound</button>
+	<a href=")age6.html"><button class="btn btn-success btn-lg">£-Pound</button>
 	</a>
 </center>
 </body>
