--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</a>
 	<a href="Page5.html"><button class="btn btn-success btn-lg">¥-Yen</button>
 	</a>
-	<a href=")age6.html"><button class="btn btn-success btn-lg">£-Pound</button>
+	<a href="Page6.html"><button class="btn btn-success btn-lg">£-Pound</button>
 	</a>
 </center>
 </body>
